# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = signal-export
version = attr: sigexport.__version__
license = MIT
description = Export Signal conversations to Markdown and HTML
author = Chris Arderne

[options]
packages = sigexport
python_requires = >= 3.6
include_package_data = True
install_requires =
    beautifulsoup4==4.11.1
    typer==0.6.1
    emoji==1.7.0
    Markdown==3.4.1
    pysqlcipher3==1.1.0

[options.package_data]
* = *.css

[options.extras_require]
dev =
    pre-commit
    black
    pytest
    mypy
    types-Markdown
    types-emoji
    isort
    tox

[options.entry_points]
console_scripts =
    sigexport = sigexport.main:cli

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy --install-types  --non-interactive {posargs:sigexport.py}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests.py

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
