[metadata]
name = signal-export
version = attr: sigexport.__version__
author = Chris Arderne
author-email = chris@rdrn.me
description = Export Signal conversations to Markdown and HTML
home-page = https://github.com/carderne/signal-export
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = chat, backup, export
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Other/Nonlisted Topic
project_urls =
  Bug Tracker = https://github.com/carderne/signal-export/issues

[options]
packages = sigexport
python_requires = >= 3.6
include_package_data = True
install_requires =
    beautifulsoup4>=4.11.1
    emoji>=1.7.0
    Markdown>=3.4.1
    typer[all]>=0.6.1

[options.package_data]
* = *.css

[options.extras_require]
all =
    pysqlcipher3==1.1.0
dev =
    black
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    tox
    twine
    types-Markdown
    types-emoji

[options.entry_points]
console_scripts =
    sigexport = sigexport.main:cli

[tox:tox]
envlist = py310
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.10
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy --install-types  --non-interactive {posargs:sigexport/}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests/

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
